# award-pynder

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
award_pynder/: __init__.py
award_pynder/sources/: __init__.py  base.py  mellon.py  nih.py  nsf.py  sloan.py  templeton.py
award_pynder/tests/: __init__.py  utils.py
award_pynder/tests/sources/: __init__.py  test_mellon.py  test_nih.py  test_nsf.py  test_sloan.py  test_templeton.py
